# wgpu-experiments

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: trunk-deploy.yml
resources/: moon.mtl
src/: camera.rs  controller.rs  depth.wgsl  geometries.rs  geometry.rs  init.rs  instances.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  pipelines.rs  resources.rs  shader.wgsl  texture.rs  transforms.rs  view.rs
