[package]
name = "wgpu-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
cfg-if = "1"
winit = "0.28"
wgpu = "0.16"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false,features = ["png", "jpeg"]}
anyhow = "1.0.71"
cgmath = "0.18.0"
tobj = { version = "4.0.0", features = ["async"]}



[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Document",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    # "Gpu",
    # "GpuAdapter",
    # "GpuAdapterFeatures",
    # "GpuAdapterLimits",
    # "GpuAddressMode",
    # "GpuBindGroup",
    # "GpuBindGroupDescriptor",
    # "GpuBindGroupEntry",
    # "GpuBindGroupLayout",
    # "GpuBindGroupLayoutDescriptor",
    # "GpuBindGroupLayoutEntry",
    # "GpuBlendComponent",
    # "GpuBlendFactor",
    # "GpuBlendOperation",
    # "GpuBlendState",
    # "GpuBuffer",
    # "GpuBufferBinding",
    # "GpuBufferBindingLayout",
    # "GpuBufferBindingType",
    # "GpuBufferDescriptor",
    # "GpuBufferUsage",
    # "GpuCanvasContext",
    # "GpuColorDict",
    # "GpuColorTargetState",
    # "GpuColorWrite",
    # "GpuCommandBuffer",
    # "GpuCommandBufferDescriptor",
    # "GpuCommandEncoder",
    # "GpuCommandEncoderDescriptor",
    # "GpuCompareFunction",
    # "GpuCompilationInfo",
    # "GpuCompilationMessage",
    # "GpuCompilationMessageType",
    # "GpuComputePassDescriptor",
    # "GpuComputePassEncoder",
    # "GpuComputePipeline",
    # "GpuComputePipelineDescriptor",
    # "GpuCullMode",
    # "GpuDepthStencilState",
    # "GpuDevice",
    # "GpuDeviceDescriptor",
    # "GpuDeviceLostInfo",
    # "GpuDeviceLostReason",
    # "GpuErrorFilter",
    # "GpuExtent3dDict",
    # "GpuFeatureName",
    # "GpuFilterMode",
    # "GpuFragmentState",
    # "GpuFrontFace",
    # "GpuImageCopyBuffer",
    # "GpuImageCopyImageBitmap",
    # "GpuImageCopyTexture",
    # "GpuImageDataLayout",
    # "GpuIndexFormat",
    # "GpuInputStepMode",
    # "GpuLoadOp",
    # "GpuMapMode",
    # "GpuMultisampleState",
    # "GpuObjectDescriptorBase",
    # "GpuOrigin2dDict",
    # "GpuOrigin3dDict",
    # "GpuOutOfMemoryError",
    # "GpuPipelineDescriptorBase",
    # "GpuPipelineLayout",
    # "GpuPipelineLayoutDescriptor",
    # "GpuPipelineStatisticName",
    # "GpuPowerPreference",
    # "GpuPrimitiveState",
    # "GpuPrimitiveTopology",
    # "GpuProgrammableStage",
    # "GpuQuerySet",
    # "GpuQuerySetDescriptor",
    # "GpuQueryType",
    # "GpuQueue",
    # "GpuRenderBundle",
    # "GpuRenderBundleDescriptor",
    # "GpuRenderBundleEncoder",
    # "GpuRenderBundleEncoderDescriptor",
    # "GpuRenderPassColorAttachment",
    # "GpuRenderPassDepthStencilAttachment",
    # "GpuRenderPassDescriptor",
    # "GpuRenderPassEncoder",
    # "GpuRenderPipeline",
    # "GpuRenderPipelineDescriptor",
    # "GpuRequestAdapterOptions",
    # "GpuSampler",
    # "GpuSamplerBindingLayout",
    # "GpuSamplerBindingType",
    # "GpuSamplerDescriptor",
    # "GpuShaderModule",
    # "GpuShaderModuleDescriptor",
    # "GpuShaderStage",
    # "GpuStencilFaceState",
    # "GpuStencilOperation",
    # "GpuStorageTextureAccess",
    # "GpuStorageTextureBindingLayout",
    # "GpuStoreOp",
    # "GpuSwapChain",
    # "GpuSwapChainDescriptor",
    # "GpuTexture",
    # "GpuTextureAspect",
    # "GpuTextureBindingLayout",
    # "GpuTextureDescriptor",
    # "GpuTextureDimension",
    # "GpuTextureFormat",
    # "GpuTextureSampleType",
    # "GpuTextureUsage",
    # "GpuTextureView",
    # "GpuTextureViewDescriptor",
    # "GpuTextureViewDimension",
    # "GpuUncapturedErrorEvent",
    # "GpuUncapturedErrorEventInit",
    # "GpuValidationError",
    # "GpuVertexAttribute",
    # "GpuVertexBufferLayout",
    # "GpuVertexFormat",
    # "GpuVertexState",
]}
js-sys = "0.3.63"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
