[package]
name = "wgpu-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[build-dependencies]
anyhow = "1.0.82"
fs_extra = "1.3.0"
glob = "0.3.1"

[dependencies]
cfg-if = "1.0"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.18"
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0.82"
cgmath = "0.18.0"
tobj = { version = "4.0.2", features = ["async"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
reqwest = { version = "0.12.4" }
getrandom = { version = "0.2.14", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Document",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    # "GpuComputePassTimestampWrite",
    # "Gpu",
    # "GpuAdapter",
    # "GpuAdapterFeatures",
    # "GpuAdapterLimits",
    # "GpuAddressMode",
    # "GpuBindGroup",
    # "GpuBindGroupDescriptor",
    # "GpuBindGroupEntry",
    # "GpuBindGroupLayout",
    # "GpuBindGroupLayoutDescriptor",
    # "GpuBindGroupLayoutEntry",
    # "GpuBlendComponent",
    # "GpuBlendFactor",
    # "GpuBlendOperation",
    # "GpuBlendState",
    # "GpuBuffer",
    # "GpuBufferBinding",
    # "GpuBufferBindingLayout",
    # "GpuBufferBindingType",
    # "GpuBufferDescriptor",
    # "GpuBufferUsage",
    # "GpuCanvasContext",
    # "GpuColorDict",
    # "GpuColorTargetState",
    # "GpuColorWrite",
    # "GpuCommandBuffer",
    # "GpuCommandBufferDescriptor",
    # "GpuCommandEncoder",
    # "GpuCommandEncoderDescriptor",
    # "GpuCompareFunction",
    # "GpuCompilationInfo",
    # "GpuCompilationMessage",
    # "GpuCompilationMessageType",
    # "GpuComputePassDescriptor",
    # "GpuComputePassEncoder",
    # "GpuComputePipeline",
    # "GpuComputePipelineDescriptor",
    # "GpuCullMode",
    # "GpuDepthStencilState",
    # "GpuDevice",
    # "GpuDeviceDescriptor",
    # "GpuDeviceLostInfo",
    # "GpuDeviceLostReason",
    # "GpuErrorFilter",
    # "GpuExtent3dDict",
    # "GpuFeatureName",
    # "GpuFilterMode",
    # "GpuFragmentState",
    # "GpuFrontFace",
    # "GpuImageCopyBuffer",
    # "GpuImageCopyImageBitmap",
    # "GpuImageCopyTexture",
    # "GpuImageDataLayout",
    # "GpuIndexFormat",
    # "GpuInputStepMode",
    # "GpuLoadOp",
    # "GpuMapMode",
    # "GpuMultisampleState",
    # "GpuObjectDescriptorBase",
    # "GpuOrigin2dDict",
    # "GpuOrigin3dDict",
    # "GpuOutOfMemoryError",
    # "GpuPipelineDescriptorBase",
    # "GpuPipelineLayout",
    # "GpuPipelineLayoutDescriptor",
    # "GpuPipelineStatisticName",
    # "GpuPowerPreference",
    # "GpuPrimitiveState",
    # "GpuPrimitiveTopology",
    # "GpuProgrammableStage",
    # "GpuQuerySet",
    # "GpuQuerySetDescriptor",
    # "GpuQueryType",
    # "GpuQueue",
    # "GpuRenderBundle",
    # "GpuRenderBundleDescriptor",
    # "GpuRenderBundleEncoder",
    # "GpuRenderBundleEncoderDescriptor",
    # "GpuRenderPassColorAttachment",
    # "GpuRenderPassDepthStencilAttachment",
    # "GpuRenderPassDescriptor",
    # "GpuRenderPassEncoder",
    # "GpuRenderPipeline",
    # "GpuRenderPipelineDescriptor",
    # "GpuRequestAdapterOptions",
    # "GpuSampler",
    # "GpuSamplerBindingLayout",
    # "GpuSamplerBindingType",
    # "GpuSamplerDescriptor",
    # "GpuShaderModule",
    # "GpuShaderModuleDescriptor",
    # "GpuShaderStage",
    # "GpuStencilFaceState",
    # "GpuStencilOperation",
    # "GpuStorageTextureAccess",
    # "GpuStorageTextureBindingLayout",
    # "GpuStoreOp",
    # "GpuSwapChain",
    # "GpuSwapChainDescriptor",
    # "GpuTexture",
    # "GpuTextureAspect",
    # "GpuTextureBindingLayout",
    # "GpuTextureDescriptor",
    # "GpuTextureDimension",
    # "GpuTextureFormat",
    # "GpuTextureSampleType",
    # "GpuTextureUsage",
    # "GpuTextureView",
    # "GpuTextureViewDescriptor",
    # "GpuTextureViewDimension",
    # "GpuUncapturedErrorEvent",
    # "GpuUncapturedErrorEventInit",
    # "GpuValidationError",
    # "GpuVertexAttribute",
    # "GpuVertexBufferLayout",
    # "GpuVertexFormat",
    # "GpuVertexState",
] }
js-sys = "0.3"


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
